<resources>
    <string name="app_name">Movies App</string>
    <string name="popular">Popular</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">Non Favorites</string>
    <string name="movie_poster">Movie poster</string>
    <string name="poster_title_placeholder">Raya and the Last Dragon</string>
    <string name="release_date_placeholder">2021/03/03</string>
    <string name="background_image">Background Image</string>
    <string name="icon_button">Icon button</string>
    <string name="button">Button</string>
    <string name="where_to_watch">Where To Watch</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="trailer">Trailer</string>
    <string name="movie_overview_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat rhoncus pulvinar. Nam at tempor neque. Curabitur a velit massa. Quisque bibendum blandit mi vel malesuada. Suspendisse potenti. Aliquam efficitur.</string>
    <string name="popular_title">Popular movies</string>
    <string name="favorites_title">Your favorites</string>
    <string name="no_favorite_title">Everything you didn\'t like</string>
    <string name="average_votes">Votes average</string>
    <string name="categories">Genres</string>
    <string name="categories_placeholder">Action, Drama, Comedia</string>
    <string name="sinopsis">Overview</string>
    <string name="tag_line_placeholder">Tag line placeholder</string>
    <string name="movie_status">Movie status</string>
    <string name="add_to_favorite_list">Add to favorites</string>
    <string name="remove_from_favorite_list">Remove from favorites</string>
    <string name="add_to_no_favorite_list">Add to non favorites</string>
    <string name="remove_from_no_favorites">Remove from non favorites</string>
    <string name="ok">Ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_to_load_again">Try to load again</string>
    <string name="oops_something_went_wrong">¡Oops! Something went wrong</string>
    <string name="error_icon">Error icon</string>
    <string name="empty_placeholder">Empty placeholder</string>
    <string name="empty_favorites">¡Your favorites list is empty!</string>
    <string name="empty_non_favorites">¡Your non favorites list is empty!</string>
    <string name="movie_removed">This movie was removed successfully</string>
    <string name="movie_added">This movie was added successfully</string>
    <string name="dialog_title_add">Added</string>
    <string name="dialog_title_remove">Removed</string>
</resources>